--- a/pom.xml
+++ b/pom.xml
@@ -160,8 +160,8 @@
                     <workingDirectory>frontend</workingDirectory>
                     <environmentVariables>
                         <!-- The following parameters create an NPM sandbox for CI -->
-                        <NPM_CONFIG_PREFIX>${basedir}/npm</NPM_CONFIG_PREFIX>
-                        <NPM_CONFIG_TMP>${project.build.directory}/npmtmp</NPM_CONFIG_TMP>
+                        <NPM_CONFIG_PREFIX>${basedir}/frontend/build</NPM_CONFIG_PREFIX>
+                        <NPM_CONFIG_TMP>${project.build.directory}/npmtemp</NPM_CONFIG_TMP>
                     </environmentVariables>
                 </configuration>
             </plugin>
