--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "react": "^16.8.3",
     "react-dom": "^16.8.2",
     "react-file-base64": "^1.0.3",
+    "react-headroom": "^2.2.8",
     "react-image-crop": "^6.0.14",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
