--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react-file-base64": "^1.0.3",
     "react-headroom": "^2.2.8",
     "react-image-crop": "^6.0.14",
+    "react-infinite-scroller": "^1.2.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
     "recompose": "^0.30.0",
