--- a/pom.xml
+++ b/pom.xml
@@ -70,11 +70,11 @@
             <scope>test</scope>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-boot-security-test</artifactId>
-            <scope>test</scope>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.security</groupId>-->
+            <!--<artifactId>spring-boot-security-test</artifactId>-->
+            <!--<scope>test</scope>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -163,47 +163,6 @@
                     </environmentVariables>
                 </configuration>
             </plugin>
-
-            <!--<plugin>-->
-            <!--<groupId>com.github.eirslett</groupId>-->
-            <!--<artifactId>frontend-maven-plugin</artifactId>-->
-            <!--<version>1.6</version>-->
-            <!--<configuration>-->
-            <!--<workingDirectory>frontend</workingDirectory>-->
-            <!--<installDirectory>target</installDirectory>-->
-            <!--</configuration>-->
-            <!--<executions>-->
-            <!--<execution>-->
-            <!--<id>install node and npm</id>-->
-            <!--<goals>-->
-            <!--<goal>install-node-and-npm</goal>-->
-            <!--</goals>-->
-            <!--<configuration>-->
-            <!--<nodeVersion>v11.13.0</nodeVersion>-->
-            <!--<npmVersion>5.6.0</npmVersion>-->
-            <!--<nodeDownloadRoot>https://nodejs.org/dist/</nodeDownloadRoot>-->
-            <!--</configuration>-->
-            <!--</execution>-->
-            <!--<execution>-->
-            <!--<id>npm install</id>-->
-            <!--<goals>-->
-            <!--<goal>npm</goal>-->
-            <!--</goals>-->
-            <!--<configuration>-->
-            <!--<arguments>install</arguments>-->
-            <!--</configuration>-->
-            <!--</execution>-->
-            <!--<execution>-->
-            <!--<id>npm run build</id>-->
-            <!--<goals>-->
-            <!--<goal>npm</goal>-->
-            <!--</goals>-->
-            <!--<configuration>-->
-            <!--<arguments>run build</arguments>-->
-            <!--</configuration>-->
-            <!--</execution>-->
-            <!--</executions>-->
-            <!--</plugin>-->
 
             <plugin>
                 <artifactId>maven-antrun-plugin</artifactId>
